<?xml version="1.0"?>
<package>
  <name>wm_roboteq_hardware_interface</name>
  <version>1.0.0</version>
  <description>The roboteq hardware interface package</description>
  <maintainer email="thierrypouplier@gmail.com">Thierry Pouplier</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <url type="website">https://github.com/WalkingMachine/wm_roboteq_hardware_interface</url> -->


  <author email="thierrypouplier@gmail.com">Thierry Pouplier</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>hardware_interface</build_depend>
  <run_depend>hardware_interface</run_depend>

  <build_depend>pluginlib</build_depend>
  <run_depend>pluginlib</run_depend>

  <run_depend>roboteq_msgs</run_depend>
  <build_depend>roboteq_msgs</build_depend>

  <build_depend>combined_robot_hw</build_depend>
  <run_depend>combined_robot_hw</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <hardware_interface plugin="${prefix}/wm_roboteq_hw_plugin.xml"/>
  </export>
</package>
